// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypographyPreset renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "DM Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  letter-spacing: -0.5px;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset renders responsive override editorialParagraph010 for xs and editorialParagraph030 for md breakpoints 1`] = `
<DocumentFragment>
  @media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 14px;
    line-height: 1.4285714285714286;
    font-weight: 400;
    letter-spacing: -0.5px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 18px;
    line-height: 1.5555555555555556;
    font-weight: 400;
    letter-spacing: -0.5px;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset renders responsive override editorialParagraph010 for xs, editorialParagraph020 for sm, and editorialParagraph030 for md breakpoints 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 14px;
    line-height: 1.4285714285714286;
    font-weight: 400;
    letter-spacing: -0.5px;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: -0.5px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 18px;
    line-height: 1.5555555555555556;
    font-weight: 400;
    letter-spacing: -0.5px;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset renders responsive override editorialParagraph010 for xs, editorialParagraph020 for sm, and wrong for md breakpoints 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 14px;
    line-height: 1.4285714285714286;
    font-weight: 400;
    letter-spacing: -0.5px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: -0.5px;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset renders responsive override editorialParagraph010 for xs, editorialParagraph020 for sm, editorialParagraph030 for md, editorialHeading010 for lg and xl breakpoints and ignore wrong prop 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 14px;
    line-height: 1.4285714285714286;
    font-weight: 400;
    letter-spacing: -0.5px;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: -0.5px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    font-family: "DM Sans",sans-serif;
    font-size: 18px;
    line-height: 1.5555555555555556;
    font-weight: 400;
    letter-spacing: -0.5px;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 18px;
    line-height: 1.1111111111111112;
    font-weight: 500;
    letter-spacing: -0.5px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 22px;
    line-height: 1.1666666666666667;
    font-weight: 500;
    letter-spacing: -0.5px;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset renders with fontSmooth and fontStretch 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "DM Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  letter-spacing: -0.5px;
  font-smooth: always;
  font-stretch: condensed;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TypographyPreset renders with override editorialParagraph010 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: -0.5px;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;
